syntax = "proto3";

package pb;

import "coin.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message ListWatchlistCoinsRequest {
  int64 watchlist_id = 1;
  int64 account_id = 2;
}

message ListWatchlistCoinsResponse {
  int64 total = 1;
  repeated Coin coins  = 2;
}